--- a/app/views/partial/_menu.html.erb
+++ b/app/views/partial/_menu.html.erb
@@ -1,29 +1,60 @@
-	<!---start-top-nav---->
-			<div class="top-nav">
-				<div class="top-nav-left">
-					 <div id="nav">
-				      <ul>
-				        <li class="active"><a href="#">Mi Comunidad</a></li>
-				        <li><a href="#">About</a></li>
-				         <li><a href="#">Services</a></li>
-				         <li><a href="#">Blog</a></li>
-				         <li><a href="#">Projects</a></li>
-				         <li><a href="#">Contact</a></li>
-				     </ul>
-		       </div>
-		       <script>
-			      var navigation = responsiveNav("#nav");
-			    </script>
-				</div>
-				<div class="top-nav-right">
-					<div class="search">
-				  	<form>
-				  		<input type="text" value="" />
-				  		<input type="submit" value="" />
-				  		<div class="clear"></div>
-				  	</form>
-				  </div>
-				</div>
-				<div class="clear"> </div>
-			</div>
-			<!---End-top-nav---->
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="<%inicio_index_path%>">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        
+      
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Producto</a></li>
+         <li><a href="#">Pedido</a></li>
+        <% if user_signed_in?%>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email%> <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li><a href="<%=edit_user_registration_path %>">log out</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="<%=destroy_user_session_path %>" data-method="delete">log out</a></li>
+          </ul>
+        </li>
+        <% else%>
+        <li><a href="<%=new_user_session_path %>">logIN</a></li>
+        <% end%>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
